--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-plugin-pwa": "^1.2.0",
+    "workbox-window": "^7.4.0"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.93.2",
